# pages/api/calculateEligibility.ts
@@ -4,8 +4,10 @@ import checkAfs from '../../utils/api/checkAfs'
 import checkAllowance from '../../utils/api/checkAllowance'
 import checkGis from '../../utils/api/checkGis'
 import checkOas from '../../utils/api/checkOas'
+import { buildFieldData, FieldData } from '../../utils/api/fieldDefinitions'
 import normalizeLivingCountry from '../../utils/api/socialAgreement'
 import {
+  Fields,
   RequestSchema,
   ResponseError,
   ResponseSuccess,
@@ -46,16 +48,18 @@ export default function handler(
     const resultAfs = checkAfs(params)
     console.log('Allowance for Survivor Result: ', resultAfs)
 
-    const allFields: Array<String> = [
+    const visibleFields: Array<Fields> = [
       ...new Set([
-        ...Object.keys(params),
+        ...([...Object.keys(params)] as Array<Fields>),
         ...(resultOas.missingFields ? resultOas.missingFields : []),
         ...(resultGis.missingFields ? resultGis.missingFields : []),
         ...(resultAllowance.missingFields ? resultAllowance.missingFields : []),
         ...(resultAfs.missingFields ? resultAfs.missingFields : []),
       ]),
     ]
-    console.log('All visible fields:', allFields)
+    console.log('All visible fields:', visibleFields)
+
+    const fieldData: Array<FieldData> = buildFieldData(visibleFields)
 
     // completion
     res.status(200).json({
@@ -63,7 +67,8 @@ export default function handler(
       gis: resultGis,
       allowance: resultAllowance,
       afs: resultAfs,
-      allFields,
+      visibleFields,
+      fieldData,
     })
   } catch (error) {
     res.status(400).json({
